# kgocode

./: CMakeLists.txt  Messages.sh  gocodemodel.cpp  gocodemodel.h  gocodeplugin.cpp  gocodeplugin.h  ktexteditor_gocode.desktop  process.cpp  process.h  readme.md
